# Prima2

./: .gitignore  .gitmodules  App.config  Dockerfile  LogParsingService_Implementation_Summary.md  Preset.cs  Prima.csproj  Prima.sln  Prima.sln.DotSettings  Program.cs  README.md  Util.cs
Attributes/: ConfigurationPresetAttribute.cs  RequireUserInDatabaseAttribute.cs
ConsoleApp1/: Program.cs
Contexts/: ConfigurationContext.cs  DiscordXIVUserContext.cs  TextBlacklistContext.cs
Migrations/: 20200207043912_InitialCreate.Designer.cs  20200207043912_InitialCreate.cs  20200217045939_InitialCreate.Designer.cs  20200217045939_InitialCreate.cs  20200218081511_InitialCreate.Designer.cs  ConfigurationContextModelSnapshot.cs  DiscordXIVUserContextModelSnapshot.cs
Modules/: ClericalModule.cs  CommonModule.cs  ExtraModule.cs  ModerationModule.cs  PresenceModule.cs  XIVAPIModule.cs
Prima/: Util.cs  (+8 more)
Prima.Census/: Program.cs
Prima.Clerical/: Prima.Census.csproj  Prima.Clerical.csproj  Program.cs
Prima.Configuration/: Program.cs
Prima.Discord.Net/: AnnounceUtil.cs  CommonInitialize.cs
Prima.DiscordNet/: CommonInitialize.cs  (+2 more)
PrimaRoleReactions/: Cargo.toml
PrimaRoleReactions/db_access/: Cargo.toml
PrimaRoleReactions/db_access/src/: database.rs  lib.rs  role_reaction_info.rs  slash_command_info.rs
PrimaRoleReactions/role_reactions/: Cargo.toml
PrimaRoleReactions/role_reactions/src/: commands.rs  event_handler.rs  hooks.rs  lib.rs  typemaps.rs
PrimaRoleReactions/role_reactions/src/event_handler/: reactions.rs  slash_commands.rs
PrimaRoleReactions/src/: main.rs
(+532 files in other folders)
