[package]
name = "PrimaRoleReactions"
version = "1.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["role_reactions", "db_access"]

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
role_reactions = { path = "./role_reactions" }
db_access = { path = "./db_access" }
